Create donuts page

--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ author: Radke Orchards
 
 navbar-links:
   Varieties: "varieties"
-  Donut Hut: "donut-hut"
+  Donut Hut: "donuts"
   FAQ: "faq"
   Mailing List: "join-mailing-list"
   Contact Us: "contact"
